syntax = "proto3";

package order;

message OrderItem {
    int32 product_id = 1;
    int32 quantity = 2;
}

message OrderCreate {
    int32 user_id = 1;
    repeated OrderItem items = 2;
    float total_price = 3;
}
